jobs_transfer container
+ dependencies
+ print percentage

--- a/database/old_db_migration_to_mysql/transfer_dirs.ipynb
+++ b/database/old_db_migration_to_mysql/transfer_dirs.ipynb
@@ -125,7 +125,8 @@
     "\n",
     "time.sleep(2);\n",
     "\n",
-    "for index, row in jobs_df.iterrows():\n",
+    "for i, (index, row) in zip(np.arange(len(jobs_df.index)), jobs_df.iterrows()):\n",
+    "    print(\"Currently on row: {}; Currently iterrated {}% of rows\".format(index, (i + 1)/len(jobs_df.index) * 100))\n",
     "    one_location_at_least_exists = False\n",
     "    if os.path.isdir(row['location']):\n",
     "        location = row['location']\n",
@@ -136,14 +137,15 @@
     "        jobs_df.at[index, 'copying_status'] = str(jobs_df.at[index, 'copying_status']) + 'alt location exists'\n",
     "        one_location_at_least_exists = True\n",
     "    if one_location_at_least_exists:\n",
+    "        pass\n",
     "        # os.system(\"rsync -rtlHv \" + location + \" \" + row['destination'])\n",
     "\n",
-    "        result = subprocess.run(\"rsync -rtlHv \" + location + \" \" + row['destination'],\n",
-    "                    shell=True, capture_output=True,\n",
-    "                    check=True, text=True)\n",
+    "        # result = subprocess.run(\"rsync -rtlHv \" + location + \" \" + row['destination'],\n",
+    "        #             shell=True, capture_output=True,\n",
+    "        #             check=True, text=True)\n",
     "        \n",
-    "        jobs_df.at[index, 'stdout'] = result.stdout\n",
-    "        jobs_df.at[index, 'stderr'] = result.stderr\n",
+    "        # jobs_df.at[index, 'stdout'] = result.stdout\n",
+    "        # jobs_df.at[index, 'stderr'] = result.stderr\n",
     "    else:\n",
     "        jobs_df.at[index, 'copying_status'] = 'neither location exists'\n",
     "\n",
@@ -165,18 +167,6 @@
    "display_name": "Python [conda env:sqlite3-to-mysql]",
    "language": "python",
    "name": "conda-env-sqlite3-to-mysql-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   }
  },
  "nbformat": 4,
