--- a/storage/app/public/README
+++ b/storage/app/public/README
@@ -10,6 +10,7 @@ Version: 1.3.5 (27 May 2019)
 Version: 1.3.5d (14 Oct 2019)
 Version: 1.6.0 (7 September 2023)
 Version: 1.6.2
+Version: 1.6.3 (26 January 2025)
 
 
 This file contains description of columns for every downloadable file.
